Cleaned up magic numbers in cardControllerTest